tests/ui/rust_pinned.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
 --> $DIR/rust_pinned.rs:6:14
  |
6 |         type Pinned;
  |         -----^^^^^^-
  |         |    |
  |         |    within `Pinned`, the trait `Unpin` is not implemented for `PhantomPinned`
  |         required by this bound in `__AssertUnpin`
  |
  = note: required because it appears within the type `Pinned`
